--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Esti</title>
+    <link rel="icon" href="./src/img/logo.png" type="image/x-icon"> 
+    <title>Advance Store</title>
   </head>
   <body>
     <div id="root"></div>
